--- a/result/spyc/example-1.yml
+++ b/result/spyc/example-1.yml
@@ -1,5 +1,5 @@
 ---
---- !ruby/object: YAML::DomainType
+0: '--- !ruby/object:YAML::DomainType'
 domain: yaml.org,2002
 type_id: '<tag:clarkevans.com,2002:invoice>'
 value:
@@ -21,12 +21,12 @@ value:
   product:
     - 
       description: Basketball
-      price: 450.0
+      price: "450.0"
       quantity: 4
       sku: BL394D
     - 
       description: Super Hoop
-      price: 2392.0
+      price: "2392.0"
       quantity: 1
       sku: BL4438H
   ship-to:
