--- a/result/spyc/example-3.yml
+++ b/result/spyc/example-3.yml
@@ -3,22 +3,22 @@ default:
   adapter: mysql
   host: 127.0.0.1
   username: root
-  password:
+  password: ""
 development:
   adapter: mysql
   host: 127.0.0.1
   username: root
-  password:
+  password: ""
   database: development
 staging:
   adapter: mysql
   host: 127.0.0.1
   username: root
-  password:
+  password: ""
   database: staging
 production:
   adapter: mysql
   host: 127.0.0.1
   username: root
-  password:
+  password: ""
   database: production
