--- a/result/spyc/example-2.yml
+++ b/result/spyc/example-2.yml
@@ -9,16 +9,16 @@ attributes:
   reset_password_sent_at: ""
   remember_created_at: ""
   sign_in_count: 3
-  current_sign_in_at: 2014-03-23 22:24:26.000000000 Z
-  last_sign_in_at: 2014-03-19 13:47:22.000000000 Z
+  current_sign_in_at: 2014-03-23T22:24:26Z
+  last_sign_in_at: 2014-03-19T13:47:22Z
   current_sign_in_ip: 127.0.0.1
   last_sign_in_ip: 172.16.46.1
   confirmation_token: ""
-  confirmed_at: 2014-03-18 16:17:59.000000000 Z
-  confirmation_sent_at: 2014-03-18 16:17:52.000000000 Z
+  confirmed_at: 2014-03-18T16:17:59Z
+  confirmation_sent_at: 2014-03-18T16:17:52Z
   unconfirmed_email: ""
   failed_attempts: 0
   unlock_token: ""
   locked_at: ""
-  created_at: 2014-03-18 16:17:51.000000000 Z
-  updated_at: 2014-03-23 22:24:26.000000000 Z
+  created_at: 2014-03-18T16:17:51Z
+  updated_at: 2014-03-23T22:24:26Z
