--- a/result/symfony-yaml/example-1.yml
+++ b/result/symfony-yaml/example-1.yml
@@ -5,7 +5,7 @@ value:
     comments: 'Late afternoon is best. Backup contact is Nancy Billsmer @ 338-4338.'
     date: 980208000
     invoice: 34843
-    product: [{ description: Basketball, price: !!float 450, quantity: 4, sku: BL394D }, { description: 'Super Hoop', price: !!float 2392, quantity: 1, sku: BL4438H }]
+    product: [{ description: Basketball, price: 450.0, quantity: 4, sku: BL394D }, { description: 'Super Hoop', price: 2392.0, quantity: 1, sku: BL4438H }]
     ship-to: { address: { city: 'Royal Oak', lines: "458 Walkman Dr.\nSuite #292\n", postal: 48046, state: MI }, family: Dumars, given: Chris }
     tax: 251.42
     total: 4443.52
