--- a/result/symfony-yaml/example-2.yml
+++ b/result/symfony-yaml/example-2.yml
@@ -6,16 +6,16 @@ attributes:
     reset_password_sent_at: null
     remember_created_at: null
     sign_in_count: 3
-    current_sign_in_at: false
-    last_sign_in_at: false
+    current_sign_in_at: 1395613466
+    last_sign_in_at: 1395236842
     current_sign_in_ip: 127.0.0.1
     last_sign_in_ip: 172.16.46.1
     confirmation_token: null
-    confirmed_at: false
-    confirmation_sent_at: false
+    confirmed_at: 1395159479
+    confirmation_sent_at: 1395159472
     unconfirmed_email: null
     failed_attempts: 0
     unlock_token: null
     locked_at: null
-    created_at: false
-    updated_at: false
+    created_at: 1395159471
+    updated_at: 1395613466
